# kinesthetic_teaching

./: CMakeLists.txt  README.md  package.xml  setup.py
scripts/: process.py  record.py  replay.py  retime.py
src/: record.cpp
src/kinesthetic_teaching/: recording.py  utils.py
