<?xml version="1.0"?>
<package format="2">
  <name>kinesthetic_teaching</name>
  <version>0.0.0</version>
  <description>The kinesthetic_teaching package</description>

  <maintainer email="me@v4hn.de">v4hn</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
